--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1 class="title">Rock Paper Scissors Game</h1>
 
     <div class="buttons">
-      <button class="move-button" onclick="playGame('Rock')">
+      <button class="move-button" onclick="playGame('rock')">
         <img class="move-icon" src="./IMAGES/rock-emoji.png">
       </button>
-      <button class="move-button" onclick="playGame('Paper')">
+      <button class="move-button" onclick="playGame('paper')">
         <img class="move-icon" src="./IMAGES/paper-emoji.png">
       </button>
-      <button class="move-button" onclick="playGame('Scissors')">
+      <button class="move-button" onclick="playGame('scissors')">
         <img class="move-icon" src="./IMAGES/scissors-emoji.png">
       </button>
     </div>
